force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/NPN_CSP_Usage_Tracker__c.object-meta.xml
<CustomObject>
    <label>NPN CSP Usage Tracker</label>
    <nameField>
        <displayFormat>NC-{000000}</displayFormat>
        <label>NPN CSP Usage Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPN CSP Usage Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>