force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPN CSP Usage Trackers</relationshipLabel>
    <relationshipName>NPN_CSP_Usage_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>