force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Anticipated_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Production_Date__c</fullName>
    <label>Anticipated Production Date</label>
    <type>Date</type>
</CustomField>