force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Contact_who_Verified_NPN_CSP_Usage__c.field-meta.xml
<CustomField>
    <fullName>Contact_who_Verified_NPN_CSP_Usage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Note the Contact at the customer site who verified these details</inlineHelpText>
    <label>Contact who Verified NPN CSP Usage</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please ensure the Contact you select is related to the NPN CSP Usage Account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Only Contacts from the NPN CSP Usage Account can be selected</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPN CSP Usage Trackers</relationshipLabel>
    <relationshipName>NPN_CSP_Usage_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>