force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <label>Contract Length</label>
    <length>100</length>
    <type>Text</type>
</CustomField>