force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/GPUs_Consumed__c.field-meta.xml
<CustomField>
    <fullName>GPUs_Consumed__c</fullName>
    <label>GPUs Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>