force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>Instance_Type__c</fullName>
    <label>Instance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Spot_Preemptible</fullName>
                <label>Spot/Preemptible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>