force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>What type of vGPU license did you subscribe for?</description>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workload__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRID vApps</fullName>
            </value>
            <value>
                <fullName>GRID vPC</fullName>
            </value>
            <value>
                <fullName>Quadro vDWS</fullName>
            </value>
            <value>
                <fullName>vCompute Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>