force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/NPN_CSP_Partner__c.field-meta.xml
<CustomField>
    <fullName>NPN_CSP_Partner__c</fullName>
    <label>NPN CSP Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance2000</fullName>
            </value>
            <value>
                <fullName>Alibaba (Aliyun)</fullName>
            </value>
            <value>
                <fullName>Amazon (AWS)</fullName>
            </value>
            <value>
                <fullName>Approach Technology</fullName>
            </value>
            <value>
                <fullName>Blue Sky Systems</fullName>
            </value>
            <value>
                <fullName>Carolinas IT</fullName>
            </value>
            <value>
                <fullName>Cloudalize</fullName>
            </value>
            <value>
                <fullName>Core Scientific</fullName>
            </value>
            <value>
                <fullName>Deutsche Telekom – Open Telekom Cloud</fullName>
            </value>
            <value>
                <fullName>Epigrid</fullName>
            </value>
            <value>
                <fullName>FNW</fullName>
            </value>
            <value>
                <fullName>Google Cloud</fullName>
            </value>
            <value>
                <fullName>IBM (Bluemix)</fullName>
            </value>
            <value>
                <fullName>Komplett Group</fullName>
            </value>
            <value>
                <fullName>LightEdge Solutions</fullName>
            </value>
            <value>
                <fullName>Magic Cloud</fullName>
            </value>
            <value>
                <fullName>Microsoft (Azure)</fullName>
            </value>
            <value>
                <fullName>Nimbix</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>PlayKey</fullName>
            </value>
            <value>
                <fullName>SCC UK</fullName>
            </value>
            <value>
                <fullName>Tencent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>