force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Number_of_vGPU_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_vGPU_Licenses__c</fullName>
    <description>For how many users has your client subscribed to the VDI service?</description>
    <label>Number of vGPU Licenses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>