force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Other_Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Product_Details__c</fullName>
    <label>Other Product Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>