force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Other_Workload_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Workload_Detail__c</fullName>
    <label>Other Workload Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>