force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-2132-Sales: Update NPN CSP Usage Tracker (CCO) with a new user lookup field</description>
    <inlineHelpText>If none selected then it will auto set to the Account&apos;s Owner.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPN_CSP_Usage_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>