force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Product_Used__c.field-meta.xml
<CustomField>
    <fullName>Product_Used__c</fullName>
    <label>Product Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A100</fullName>
            </value>
            <value>
                <fullName>V100</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>M60</fullName>
            </value>
            <value>
                <fullName>P100</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>