force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/RAPIDS__c.field-meta.xml
<CustomField>
    <fullName>RAPIDS__c</fullName>
    <label>RAPIDS</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workload__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>