force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/vGPU_Type_Selections__c.field-meta.xml
<CustomField>
    <fullName>vGPU_Type_Selections__c</fullName>
    <description>What type of service access has your partner signed up for?  
Named user access or concurrent user access?</description>
    <label>vGPU Type Selections</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workload__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Users</fullName>
            </value>
            <value>
                <fullName>Concurrent Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>