force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/fields/Workload__c.field-meta.xml
<CustomField>
    <fullName>Workload__c</fullName>
    <label>Workload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autonomous vehicle</fullName>
            </value>
            <value>
                <fullName>Data Analytics (Not ML or DL)</fullName>
            </value>
            <value>
                <fullName>Deep Learning – Inferencing</fullName>
            </value>
            <value>
                <fullName>Deep Learning – Training</fullName>
            </value>
            <value>
                <fullName>Game Streaming</fullName>
            </value>
            <value>
                <fullName>GPU/vGPU as a Service</fullName>
            </value>
            <value>
                <fullName>Graphics Virtualization (vGPU)</fullName>
            </value>
            <value>
                <fullName>High Performance Computing (HPC)</fullName>
            </value>
            <value>
                <fullName>Intelligent Video Analytics (IVA)</fullName>
            </value>
            <value>
                <fullName>Machine Learning (Not DL)</fullName>
            </value>
            <value>
                <fullName>Medical Imaging</fullName>
            </value>
            <value>
                <fullName>Rendering</fullName>
            </value>
            <value>
                <fullName>Scalable Visualization Solutions (SVS)</fullName>
            </value>
            <value>
                <fullName>Virtual &amp; Augmented Reality (VR/AR)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>