force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/validationRules/Require_Other_if_Workload_is_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Other_if_Workload_is_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL (  Workload__c , &apos;Other&apos; ) , 
 ISBLANK ( Other_Workload_Detail__c ))</errorConditionFormula>
    <errorDisplayField>Other_Workload_Detail__c</errorDisplayField>
    <errorMessage>Please fill in the other workload details</errorMessage>
</ValidationRule>