force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Anticipated_Production_Date__c</columns>
    <columns>GPUs_Consumed__c</columns>
    <columns>NPN_CSP_Partner__c</columns>
    <columns>Products_Used__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>