force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/listViews/Dawn_Voss_CCOs.listView-meta.xml
<ListView>
    <fullName>Dawn_Voss_CCOs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NPN_CSP_Partner__c</columns>
    <columns>Status__c</columns>
    <columns>Contact_who_Verified_NPN_CSP_Usage__c</columns>
    <columns>Anticipated_Production_Date__c</columns>
    <columns>GPUs_Consumed__c</columns>
    <columns>Instance_Type__c</columns>
    <columns>Products_Used__c</columns>
    <columns>Product_Used__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Anticipated_Production_Date_FQ__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>WalMart Stores Inc</value>
    </filters>
    <label>WalMart CCOs</label>
    <sharedTo>
        <role>NALA_Retail_Sales</role>
    </sharedTo>
</ListView>