force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/listViews/My_NPN_CSP_Usage_Trackers_Last_FQ.listView-meta.xml
<ListView>
    <fullName>My_NPN_CSP_Usage_Trackers_Last_FQ</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Contact_who_Verified_NPN_CSP_Usage__c</columns>
    <columns>Anticipated_Production_Date__c</columns>
    <columns>GPUs_Consumed__c</columns>
    <columns>Instance_Type__c</columns>
    <columns>NPN_CSP_Partner__c</columns>
    <columns>Products_Used__c</columns>
    <columns>Product_Used__c</columns>
    <columns>Project_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Anticipated_Production_Date__c</field>
        <operation>equals</operation>
        <value>LAST_FISCAL_QUARTER</value>
    </filters>
    <label>My NPN CSP Usage Trackers Last FQ</label>
</ListView>