force-app/main/default/objects/NPN_CSP_Usage_Tracker__c/listViews/Tim_Team_NPN_CSP_Usage_Trackers.listView-meta.xml
<ListView>
    <fullName>Tim_Team_NPN_CSP_Usage_Trackers</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NPN_CSP_Partner__c</columns>
    <columns>Status__c</columns>
    <columns>Contact_who_Verified_NPN_CSP_Usage__c</columns>
    <columns>Anticipated_Production_Date__c</columns>
    <columns>GPUs_Consumed__c</columns>
    <columns>Instance_Type__c</columns>
    <columns>Products_Used__c</columns>
    <columns>Product_Used__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Anticipated_Production_Date_FQ__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner__c</field>
        <operation>contains</operation>
        <value>Tim Petersen,Terry Brown,Arjuna Pandit,DJ Jackson</value>
    </filters>
    <label>Tim &amp; Team NPN CSP Usage Trackers</label>
    <sharedTo>
        <group>NAlA_M_E_Telco</group>
    </sharedTo>
</ListView>